Made Label Colour comp

--- a/Common/Languages/English/Keyed/FCPToolsKeyed.xml
+++ b/Common/Languages/English/Keyed/FCPToolsKeyed.xml
@@ -5,4 +5,8 @@
 	<!-- Storyteller Joiner -->
 	<FCP_LetterLabel_SpecialWandererJoins>Special Wanderer: {PAWN_nameDef}</FCP_LetterLabel_SpecialWandererJoins>
 	<FCP_Letter_SpecialWandererJoins>A pawn {PAWN_title} named {PAWN_nameDef} has arrived and wants to join the colony.</FCP_Letter_SpecialWandererJoins>
+	
+	<FCP_RarityCommon>Common</FCP_RarityCommon>
+	<FCP_RarityCommon>Rare</FCP_RarityCommon>
+	<FCP_RarityCommon>Unique</FCP_RarityCommon>
 </LanguageData>
