added mech detonation to the project

--- a/Common/Languages/English/Keyed/FCPToolsKeyed.xml
+++ b/Common/Languages/English/Keyed/FCPToolsKeyed.xml
@@ -9,4 +9,6 @@
 	<FCP_RarityCommon>Common</FCP_RarityCommon>
 	<FCP_RarityRare>Rare</FCP_RarityRare>
 	<FCP_RarityUnique>Unique</FCP_RarityUnique>
+	
+	<FCP_MechDetonate>Detonate</FCP_MechDetonate>
 </LanguageData>
