--- a/Common/Languages/English/Keyed/FCPToolsKeyed.xml
+++ b/Common/Languages/English/Keyed/FCPToolsKeyed.xml
@@ -17,5 +17,10 @@
 	<FCP_PickUpMax>Pick up max</FCP_PickUpMax>
 	<FCP_PickUpOne>Pick up one {0}</FCP_PickUpOne>
 	<FCP_TooHeavy>Too Heavy</FCP_TooHeavy>
+  <FCP_TechprintLabel>FCP techprint ({PROJECT_label})</FCP_TechprintLabel>
+  <FCP_TechprintDesc>FCP This is a techprint for the research project '{PROJECT_label}'.
+\nThe physical form of techprints can range from scraps of paper with diagrams, all the way to advanced self-contained teaching machines. Regardless of form, they play the same role. They give your researchers the confidence that an idea is possible, and a rough idea of the designs used in more established societies.
+\nYour researchers need the foundational knowledge offered by techprints to know where to start on a given technology. Only after enough techprints have been applied can your researchers work out the fine details of how to make use of the technology in your particular situation.
+\nApplying techprints to a satisfied project fulfills half the remaining research progress. In addition, researchers always gain a boost to their intellectual skills when applying techprints, even on already-completed technologies.</FCP_TechprintDesc>
 
 </LanguageData>
