--- a/Common/Languages/English/Keyed/VATS.xml
+++ b/Common/Languages/English/Keyed/VATS.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
-    <FCP_Settings.VATS>V.A.T.S.</FCP_Settings.VATS>
+    <FCP_Settings_VATS>V.A.T.S.</FCP_Settings_VATS>
+    <FCP_Settings_VATS_header>V.A.T.S. Settings</FCP_Settings_VATS_header>
     <FCP_VATS_Settings_EnableSlowDownTime>Enable time slowdown</FCP_VATS_Settings_EnableSlowDownTime>
     <FCP_VATS_Settings_EnableZoom>Enable the zoom shader</FCP_VATS_Settings_EnableZoom>
     <FCP_VATS_Settings_ZoomTimeout>How many ticks after creation until we force remove the zoom (in case of bugs): {0} ticks</FCP_VATS_Settings_ZoomTimeout>
