Enlist: handle shuttles & hostile goodwill
Apply goodwill penalties and notify player when enlisting makes other factions hostile to the enlisted faction; new localization keys added for the letter. Add FCP_Core reference to the Enlist project. Replace fragile reflection logic for custom transport ships with direct type access: load shuttle defs via FactionModExtension, create shuttle Thing/CompTransporter, transfer caravan cargo to the shuttle, create TravellingTransporters with proper fields and add its transporter info; fall back to drop pods on failure. Also change texture lookup to reportFailure:false with BaseContent.BadTex fallback and update GetTransportPodsFloatMenuOptionsAt to accept an optional launchAction. Updated compiled assembly (FCP_Enlist.dll).

--- a/Common/Languages/English/Keyed/FCPToolsKeyed.xml
+++ b/Common/Languages/English/Keyed/FCPToolsKeyed.xml
@@ -29,4 +29,8 @@
 	<FCP_WeaponReq_WrongXenotype>Requires xenotype: {0}</FCP_WeaponReq_WrongXenotype>
 	<FCP_WeaponReq_RequiresApparel>Requires apparel: {0}</FCP_WeaponReq_RequiresApparel>
 
+	<!-- Enlistment - Hostile Factions -->
+	<FCP_Enemy_Of_Enlist_Faction>New Enemy</FCP_Enemy_Of_Enlist_Faction>
+	<FCP_Enemy_Of_Enlist_Faction_Desc>By enlisting with {ENLISTED_name}, you have become an enemy of {HOSTILE_name}. They are now hostile toward your colony.</FCP_Enemy_Of_Enlist_Faction_Desc>
+
 </LanguageData>
